Playback of Alembic file results in an EXCEPTION_ACCESS_VIOLATION crash within the tbbmalloc.dll module #94674

Closed
opened 2022-01-06 00:24:12 +01:00 by Ryan Guy · 6 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.89

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-04 23:51, hash: 713d59bcaf
Worked: Blender 2.93.7

Short description of error

I am using Blender to export liquid simulation animations to Alembic. When importing the Alembic file back into Blender, playback of the animation or scrubbing through the timeline results in frequent crashes on seemingly random frames.

I have tried exporting multiple different simulations. They do not always result in a crash, but when they do, the crashes occur frequently and consistently within a few frames.

The crashes do not always display an error in the console, but when they do, an EXCEPTION_ACCESS_VIOLATION is displayed:

Read blend: C:\Users\ryanl\Downloads\alembic_playback_example.blend
WARN (bke.customdata): C:\Users\blender\git\blender-vdev\blender.git\source\blender\blenkernel\intern\customdata.cc:4434 CustomData_verify_versions: .blend file read: removing a data layer that should not have been written
Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FFECC1B5C2E
Module  : tbbmalloc.dll
Thread  : 000038d4
Writing: C:\Users\ryanl\AppData\Local\Temp\alembic_playback_example.crash.txt

Attached is the crash log: alembic_playback_example.crash.txt

Exact steps for others to reproduce the error

Attached are the .blend file and a small Alembic file (5 frames):

alembic_playback_example.blend

alembic_cache.abc

  1. Open the .blend file
  2. Play animation

Result: crash within a few frames, usually before the timeline loops back to the beginning.

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.89 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-04 23:51, hash: `713d59bcaf` Worked: Blender 2.93.7 **Short description of error** I am using Blender to export liquid simulation animations to Alembic. When importing the Alembic file back into Blender, playback of the animation or scrubbing through the timeline results in frequent crashes on seemingly random frames. I have tried exporting multiple different simulations. They do not always result in a crash, but when they do, the crashes occur frequently and consistently within a few frames. The crashes do not always display an error in the console, but when they do, an EXCEPTION_ACCESS_VIOLATION is displayed: ``` Read blend: C:\Users\ryanl\Downloads\alembic_playback_example.blend WARN (bke.customdata): C:\Users\blender\git\blender-vdev\blender.git\source\blender\blenkernel\intern\customdata.cc:4434 CustomData_verify_versions: .blend file read: removing a data layer that should not have been written Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FFECC1B5C2E Module : tbbmalloc.dll Thread : 000038d4 Writing: C:\Users\ryanl\AppData\Local\Temp\alembic_playback_example.crash.txt ``` Attached is the crash log: [alembic_playback_example.crash.txt](https://archive.blender.org/developer/F12790805/alembic_playback_example.crash.txt) **Exact steps for others to reproduce the error** Attached are the .blend file and a small Alembic file (5 frames): [alembic_playback_example.blend](https://archive.blender.org/developer/F12790806/alembic_playback_example.blend) [alembic_cache.abc](https://archive.blender.org/developer/F12790807/alembic_cache.abc) 1. Open the .blend file 2. Play animation Result: crash within a few frames, usually before the timeline loops back to the beginning.
Author

Added subscriber: @rlguy

Added subscriber: @rlguy

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

ASAN shows a bit more information and it looks like the first fault actually happens below:

Inside read_generated_coordinates:
- The ORCO blob is created using 1102 verts from totvert (ie. abc_ocro.get()->size())
- But we attempt to use 1142 verts from mesh->totvert later on and overrun memory

==3960==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x11b19a74dcb0 at pc 0x7ff69d605b37 bp 0x0010111f2620 sp 0x0010111f2628
READ of size 4 at 0x11b19a74dcb0 thread T25
    - 0 0x7ff69d605b36 in BKE_mesh_orco_verts_transform F:\source\blender-git\blender\source\blender\blenkernel\intern\mesh.cc:1311
    - 1 0x7ff69fdfc134 in blender::io::alembic::read_generated_coordinates F:\source\blender-git\blender\source\blender\io\alembic\intern\abc_customdata.cc:564
    - 2 0x7ff69fd71c9a in blender::io::alembic::read_mesh_sample F:\source\blender-git\blender\source\blender\io\alembic\intern\abc_reader_mesh.cc:507
    - 3 0x7ff69fd6857d in blender::io::alembic::AbcMeshReader::read_mesh F:\source\blender-git\blender\source\blender\io\alembic\intern\abc_reader_mesh.cc:773
    - 4 0x7ff69fd14f8f in ABC_read_mesh F:\source\blender-git\blender\source\blender\io\alembic\intern\alembic_capi.cc:799
    - 5 0x7ff69ea9cc87 in modifyMesh F:\source\blender-git\blender\source\blender\modifiers\intern\MOD_meshsequencecache.c:241
    - 6 0x7ff69cb69595 in BKE_modifier_modify_mesh F:\source\blender-git\blender\source\blender\blenkernel\intern\modifier.c:998
    - 7 0x7ff69dd6782b in modifier_modify_mesh_and_geometry_set F:\source\blender-git\blender\source\blender\blenkernel\intern\DerivedMesh.cc:875
    - 8 0x7ff69dd690e6 in mesh_calc_modifiers F:\source\blender-git\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1224
    - 9 0x7ff69dd6bff5 in mesh_build_data F:\source\blender-git\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1847
    #10 0x7ff69dd60867 in makeDerivedMesh F:\source\blender-git\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1994
ASAN shows a bit more information and it looks like the first fault actually happens below: ``` Inside read_generated_coordinates: - The ORCO blob is created using 1102 verts from totvert (ie. abc_ocro.get()->size()) - But we attempt to use 1142 verts from mesh->totvert later on and overrun memory ==3960==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x11b19a74dcb0 at pc 0x7ff69d605b37 bp 0x0010111f2620 sp 0x0010111f2628 READ of size 4 at 0x11b19a74dcb0 thread T25 - 0 0x7ff69d605b36 in BKE_mesh_orco_verts_transform F:\source\blender-git\blender\source\blender\blenkernel\intern\mesh.cc:1311 - 1 0x7ff69fdfc134 in blender::io::alembic::read_generated_coordinates F:\source\blender-git\blender\source\blender\io\alembic\intern\abc_customdata.cc:564 - 2 0x7ff69fd71c9a in blender::io::alembic::read_mesh_sample F:\source\blender-git\blender\source\blender\io\alembic\intern\abc_reader_mesh.cc:507 - 3 0x7ff69fd6857d in blender::io::alembic::AbcMeshReader::read_mesh F:\source\blender-git\blender\source\blender\io\alembic\intern\abc_reader_mesh.cc:773 - 4 0x7ff69fd14f8f in ABC_read_mesh F:\source\blender-git\blender\source\blender\io\alembic\intern\alembic_capi.cc:799 - 5 0x7ff69ea9cc87 in modifyMesh F:\source\blender-git\blender\source\blender\modifiers\intern\MOD_meshsequencecache.c:241 - 6 0x7ff69cb69595 in BKE_modifier_modify_mesh F:\source\blender-git\blender\source\blender\blenkernel\intern\modifier.c:998 - 7 0x7ff69dd6782b in modifier_modify_mesh_and_geometry_set F:\source\blender-git\blender\source\blender\blenkernel\intern\DerivedMesh.cc:875 - 8 0x7ff69dd690e6 in mesh_calc_modifiers F:\source\blender-git\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1224 - 9 0x7ff69dd6bff5 in mesh_build_data F:\source\blender-git\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1847 #10 0x7ff69dd60867 in makeDerivedMesh F:\source\blender-git\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1994 ```

This issue was referenced by 88e15ff1e6

This issue was referenced by 88e15ff1e6864959782cc8af1f874c60c51764f4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-01-06 11:50:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94674
No description provided.